README.md updated

--- a/IA.Restaurant.Api/appsettings.json
+++ b/IA.Restaurant.Api/appsettings.json
@@ -4,8 +4,8 @@
     "CommandTimeOut": "240"
   },
   "ConnectionStrings": {
-    "MYSQLContext": "Data Source=3.219.107.34; Initial Catalog=eslabon_web_dev; User ID=eslabon_base;Password=Ao8OujO_#hsu;",
-    "MSSQLContext": "Data Source=rds4.eslabon.cloud; Initial Catalog=Nomina_10_Dev; User ID=luis.cayetano;Password=12345678As;"
+    "MYSQLContext": "Data Source=localhost; Initial Catalog=IARestaurant; User ID=user;Password=pass;"
+    "MSSQLContext": "Data Source=localhost; Initial Catalog=IARestaurant; User ID=user;Password=pass;"
   },
   "Logging": {
     "LogLevel": {
