signalR and frontend were added in IA.Restaurant.Api

--- a/IA.Restaurant.Api/appsettings.json
+++ b/IA.Restaurant.Api/appsettings.json
@@ -4,8 +4,8 @@
     "CommandTimeOut": "240"
   },
   "ConnectionStrings": {
-    "MYSQLContext": "Data Source=localhost; Initial Catalog=IARestaurant; User ID=user;Password=pass;"
-    "MSSQLContext": "Data Source=localhost; Initial Catalog=IARestaurant; User ID=user;Password=pass;"
+    "MYSQLContext": "Data Source=localhost; Initial Catalog=IARestaurant; User ID=user;Password=pass;",
+    "MSSQLContext": "Server=DITOXLAP10\\SQLEXPRESS;Database=IARestaurant;user=sa;password=12345678As;"
   },
   "Logging": {
     "LogLevel": {
